# lea-rust

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.txt  README.md  rustfmt.toml
benches/: lea-ccm.rs  lea-ctr.rs  lea.rs  lea256ctr_vs_chacha20.rs  lea_vs_aes.rs  lib.rs
src/: ccm.rs  ctr.rs  gcm.rs  lib.rs  round_key.rs
tests/: lib.rs
