[package]
authors     = ["SitD <sitd0813@gmail.com>"]
categories  = ["cryptography", "no-std"]
description = "LEA(Lightweight Encryption Algorithm)"
edition     = "2018"
keywords    = ["cipher", "cryptography", "lea"]
license     = "MIT"
name        = "lea"
repository  = "https://github.com/sitd0813/lea-rust"
version     = "0.4.0"

[dependencies]
cfg-if  = "1.0.*"
cipher  = "0.2.*"
zeroize = "1.1.*"

ccm_crate = { package = "ccm", version = "0.3.*", optional = true }
ctr_crate = { package = "ctr", version = "0.6.*", optional = true }

[dev-dependencies]
aes       = "0.6.*"
chacha20  = "0.6.*"
criterion = "0.3.*"

[features]
default = ["ccm", "ctr"]

ccm = ["ccm_crate"]
ctr = ["ctr_crate"]

[[bench]]
harness = false
name    = "lea_vs_aes"

[[bench]]
harness = false
name    = "lea256ctr_vs_chacha20"