[package]
name        = "lea"
version     = "0.5.0"
authors     = ["SitD <sitd0813@gmail.com>"]
edition     = "2018"
description = "Lightweight Encryption Algorithm (LEA)"
categories  = ["cryptography", "no-std"]
keywords    = ["cipher", "cryptography", "lea"]
license     = "MIT"
repository  = "https://github.com/sitd0813/lea-rust"

[dependencies]
cfg-if = "1.*.*"
cipher = "0.3.*"

ccm = { version = "0.4.*", optional = true }
ctr = { version = "0.7.*", optional = true }
zeroize = { version = "1.*.*", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.3.*"
criterion-cycles-per-byte = "0.1.*"

[features]
default = []

[[bench]]
harness = false
name = "lea"

[[bench]]
harness = false
name = "lea-ccm"
required-features = ["ccm"]

[[bench]]
harness = false
name = "lea-ctr"
required-features = ["ctr"]