[package]
name        = "lea"
version     = "0.5.4-pre"
authors     = ["남기훈 <gihunnam@proton.me>"]
edition     = "2021"
description = "Lightweight Encryption Algorithm (LEA)"
categories  = ["cryptography", "no-std"]
keywords    = ["cipher", "cryptography", "lea"]
license     = "MIT"
repository  = "https://github.com/sitd2813/lea-rust"

[dependencies]
cfg-if = "1.*.*"
cipher = "0.3.*"

ccm = { version = "0.4.*", optional = true }
ctr = { version = "0.8.*", optional = true }
zeroize = { version = "1.*.*", optional = true, default-features = false }

[dev-dependencies]
criterion = "0.4.*"
criterion-cycles-per-byte = "0.4.*"

[features]
default = []

[[bench]]
harness = false
name = "lea"

[[bench]]
harness = false
name = "lea-ccm"
required-features = ["ccm"]

[[bench]]
harness = false
name = "lea-ctr"
required-features = ["ctr"]
